; ModuleID = '/home/carl/AnghaBench/linux/fs/nilfs2/extr_btree.c_nilfs_btree_node_dkeys.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nilfs2/extr_btree.c_nilfs_btree_node_dkeys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nilfs_btree_node = type { i32 }

@NILFS_BTREE_NODE_EXTRA_PAD_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.nilfs_btree_node*)* @nilfs_btree_node_dkeys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @nilfs_btree_node_dkeys(%struct.nilfs_btree_node* %0) #0 {
  %2 = alloca %struct.nilfs_btree_node*, align 8
  store %struct.nilfs_btree_node* %0, %struct.nilfs_btree_node** %2, align 8
  %3 = load %struct.nilfs_btree_node*, %struct.nilfs_btree_node** %2, align 8
  %4 = getelementptr inbounds %struct.nilfs_btree_node, %struct.nilfs_btree_node* %3, i64 1
  %5 = bitcast %struct.nilfs_btree_node* %4 to i8*
  %6 = load %struct.nilfs_btree_node*, %struct.nilfs_btree_node** %2, align 8
  %7 = call i64 @nilfs_btree_node_root(%struct.nilfs_btree_node* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @NILFS_BTREE_NODE_EXTRA_PAD_SIZE, align 4
  br label %12

12:                                               ; preds = %10, %9
  %13 = phi i32 [ 0, %9 ], [ %11, %10 ]
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %5, i64 %14
  %16 = bitcast i8* %15 to i32*
  ret i32* %16
}

declare dso_local i64 @nilfs_btree_node_root(%struct.nilfs_btree_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
